[gd_scene load_steps=2 format=3 uid="uid://b6j8g4q3yv6xw"]

[ext_resource type="Script" path="res://scripts/ui/palette_button.gd" id="1_rk4wd"]

[node name="PaletteButton" type="Button"]
custom_minimum_size = Vector2(200, 60)
offset_right = 200.0
offset_bottom = 60.0
toggle_mode = true
script = ExtResource("1_rk4wd")

[node name="PreviewRect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 60.0
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PreviewRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainColor" type="ColorRect" parent="PreviewRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AccentColor" type="ColorRect" parent="PreviewRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Palette Name"
vertical_alignment = 1 